Avoid jest transforming @nivo's `d3` dependency

--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
             "last 1 safari version"
         ]
     },
+    "jest": {
+        "transformIgnorePatterns": [
+            "<rootDir>/node_modules/(?!d3)/"
+        ]
+    },
     "volta": {
         "node": "18.16.0"
     }
