--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "e2e": "npx cypress run",
         "eject": "react-scripts eject"
     },
     "browserslist": {
